--- a/code-execution-engines/langchain4j-code-execution-engine-graalvm-polyglot/pom.xml
+++ b/code-execution-engines/langchain4j-code-execution-engine-graalvm-polyglot/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../../langchain4j-parent/pom.xml</relativePath>
@@ -24,7 +24,7 @@
     <dependencies>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
         </dependency>
 
@@ -79,13 +79,13 @@
         </dependency>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <scope>test</scope>
         </dependency>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
             <scope>test</scope>
         </dependency>
