--- a/langchain4j-bom/pom.xml
+++ b/langchain4j-bom/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../langchain4j-parent/pom.xml</relativePath>
@@ -20,13 +20,13 @@
         <dependencies>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -34,97 +34,97 @@
             <!-- model providers -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-open-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-azure-open-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-hugging-face</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-local-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-vertex-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-vertex-ai-gemini</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-dashscope</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-qianfan</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-zhipu-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-ollama</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-bedrock</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-chatglm</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-mistral-ai</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-cohere</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-nomic</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-anthropic</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -132,85 +132,85 @@
             <!-- embedding stores -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-cassandra</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-chroma</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-elasticsearch</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-milvus</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-opensearch</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-pgvector</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-pinecone</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-qdrant</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-redis</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-vespa</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-weaviate</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-neo4j</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-vearch</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-mongodb-atlas</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -226,7 +226,7 @@
             <!-- code execution engines -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-code-execution-engine-graalvm-polyglot</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -234,25 +234,25 @@
             <!-- document loaders -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-loader-tencent-cos</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-loader-amazon-s3</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-loader-github</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-loader-azure-storage-blob</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -260,13 +260,13 @@
             <!-- document parsers -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-parser-apache-poi</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -274,7 +274,7 @@
             <!-- embedding store filter parsers -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embedding-store-filter-parser-sql</artifactId>
                 <version>${project.version}</version>
             </dependency>
