--- a/langchain4j-cassandra/pom.xml
+++ b/langchain4j-cassandra/pom.xml
@@ -8,7 +8,7 @@
     <description>Some dependencies have a "Public Domain" license</description>
 
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../langchain4j-parent/pom.xml</relativePath>
@@ -18,13 +18,13 @@
         <astra-db-client.version>1.2.4</astra-db-client.version>
         <jackson.version>2.16.1</jackson.version>
         <logback.version>1.4.14</logback.version>
-        <maven.compiler.release>11</maven.compiler.release>
+<!--        <maven.compiler.release>11</maven.compiler.release>-->
     </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
         </dependency>
 
@@ -55,7 +55,7 @@
 
         <!-- Visibility for EmbeddingStoreIT -->
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
             <classifier>tests</classifier>
             <type>test-jar</type>
@@ -68,12 +68,12 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
             <scope>test</scope>
         </dependency>
