--- a/langchain4j-core/pom.xml
+++ b/langchain4j-core/pom.xml
@@ -10,7 +10,7 @@
     </properties>
 
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../langchain4j-parent/pom.xml</relativePath>
