--- a/langchain4j-local-ai/pom.xml
+++ b/langchain4j-local-ai/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../langchain4j-parent/pom.xml</relativePath>
@@ -15,13 +15,13 @@
     <name>LangChain4j :: Integration :: LocalAI</name>
 
     <properties>
-        <skipLocalAiITs>false</skipLocalAiITs>
+        <skipLocalAiITs>true</skipLocalAiITs>
     </properties>
 
     <dependencies>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-open-ai</artifactId>
             <version>${project.version}</version>
         </dependency>
