--- a/langchain4j-neo4j/pom.xml
+++ b/langchain4j-neo4j/pom.xml
@@ -5,12 +5,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>dev.langchain4j</groupId>
+        <groupId>keyi.langchain4j</groupId>
         <artifactId>langchain4j-parent</artifactId>
         <version>0.28.0</version>
         <relativePath>../langchain4j-parent/pom.xml</relativePath>
     </parent>
-    
+
     <artifactId>langchain4j-neo4j</artifactId>
     <name>LangChain4j :: Integration :: Neo4j Vector Index</name>
 
@@ -21,11 +21,11 @@
         <maven.compiler.release>17</maven.compiler.release>
     </properties>
 
-    
+
     <dependencies>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-core</artifactId>
             <version>${project.version}</version>
         </dependency>
