--- a/langchain4j-cassandra/pom.xml
+++ b/langchain4j-cassandra/pom.xml
@@ -18,7 +18,7 @@
         <astra-db-client.version>1.2.4</astra-db-client.version>
         <jackson.version>2.16.1</jackson.version>
         <logback.version>1.4.14</logback.version>
-<!--        <maven.compiler.release>11</maven.compiler.release>-->
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
 
     <dependencies>
