改动集中迁移到kykms项目，解耦原生代码

--- a/langchain4j-bom/pom.xml
+++ b/langchain4j-bom/pom.xml
@@ -21,6 +21,12 @@
 
             <dependency>
                 <groupId>keyi.langchain4j</groupId>
+                <artifactId>langchain4j-kykms</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j</artifactId>
                 <version>${project.version}</version>
             </dependency>
