--- a/langchain4j-parent/pom.xml
+++ b/langchain4j-parent/pom.xml
@@ -64,6 +64,12 @@
 
             <dependency>
                 <groupId>keyi.langchain4j</groupId>
+                <artifactId>langchain4j-kykms</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
