--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>langchain4j</module>
 
         <!-- model providers -->
+        <module>langchain4j-kykms</module>
         <module>langchain4j-anthropic</module>
         <module>langchain4j-azure-open-ai</module>
         <module>langchain4j-bedrock</module>
