--- a/langchain4j-bom/pom.xml
+++ b/langchain4j-bom/pom.xml
@@ -38,7 +38,7 @@
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-easy-rag</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -162,7 +162,7 @@
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-infinispan</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -236,61 +236,61 @@
             <!-- embeddings -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-all-minilm-l6-v2</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-all-minilm-l6-v2-q</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-en</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-en-q</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-v15-en</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-en-v15-q</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-zh</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-bge-small-zh-q</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-e5-small-v2</artifactId>
                 <version>${project.version}</version>
             </dependency>
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-embeddings-e5-small-v2-q</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -332,7 +332,7 @@
             <!-- document parsers -->
 
             <dependency>
-                <groupId>dev.langchain4j</groupId>
+                <groupId>keyi.langchain4j</groupId>
                 <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -345,8 +345,6 @@
 
             <dependency>
                 <groupId>keyi.langchain4j</groupId>
-                <artifactId>langchain4j-document-parser-apache-pdfbox</artifactId>
-                <groupId>dev.langchain4j</groupId>
                 <artifactId>langchain4j-document-parser-apache-tika</artifactId>
                 <version>${project.version}</version>
             </dependency>
