--- a/langchain4j-azure-ai-search/pom.xml
+++ b/langchain4j-azure-ai-search/pom.xml
@@ -42,7 +42,7 @@
         </dependency>
 
         <dependency>
-            <groupId>dev.langchain4j</groupId>
+            <groupId>keyi.langchain4j</groupId>
             <artifactId>langchain4j-embeddings-all-minilm-l6-v2-q</artifactId>
             <scope>test</scope>
         </dependency>
