--- a/langchain4j-vertex-ai-gemini/pom.xml
+++ b/langchain4j-vertex-ai-gemini/pom.xml
@@ -22,7 +22,7 @@
     </licenses>
 
     <properties>
-        <skipVertexAiGeminiITs>false</skipVertexAiGeminiITs>
+        <skipVertexAiGeminiITs>true</skipVertexAiGeminiITs>
         <maven.compiler.parameters>true</maven.compiler.parameters>
     </properties>
 
